--- a/resources/skins.vector.styles/layouts/grid.less
+++ b/resources/skins.vector.styles/layouts/grid.less
@@ -2,9 +2,7 @@
 // Grid layout
 //
 
-@height-header: 66px;
 @width-gutter: 20px;
-@padding-top-footer: 50px;
 
 // Makes a column span entire page
 .mixin-column-full-width() {
@@ -42,39 +40,26 @@
 	}
 }
 
-.mw-footer-container {
-	padding-top: @padding-top-footer;
-	padding-bottom: 82px;
-}
-
-@media ( max-width: @max-width-tablet ) {
-	.mw-header {
-		// Match header styles applied by grid-template-rows and row-gap
-		// when grid is disabled on lower resolutions
-		height: @height-header;
-		margin-bottom: @grid-row-gap;
-	}
-}
-
 @media ( min-width: @min-width-desktop ) {
 	.mw-page-container-inner {
 		display: grid;
 		width: 100%;
-		grid-template: ~'@{height-header} min-content min-content 1fr min-content / 232px @{width-gutter} minmax(0, 1fr)';
+		grid-template: ~'min-content min-content min-content 1fr min-content / 232px @{width-gutter} minmax(0, 1fr)';
 		grid-template-areas: 'header header header'
-			'sitebanner sitebanner sitebanner'
+			'sitenotice sitenotice sitenotice'
 			'sidebar gutter content'
 			'toc gutter content'
 			'footer footer footer';
-		row-gap: @grid-row-gap;
 	}
 
 	.mw-body {
 		padding-left: 0;
 	}
 
-	#siteNotice {
-		grid-area: sitebanner;
+	// FIXME: Remove selector after I39959f43f20880e83bef945a7535d58cfe0b6412 has been in prod for a week
+	.mw-page-container-inner > #siteNotice,
+	.vector-sitenotice-container {
+		grid-area: sitenotice;
 	}
 
 	.mw-table-of-contents-container {
@@ -102,7 +87,6 @@
 
 	.mw-footer-container {
 		grid-area: footer;
-		padding-top: @padding-top-footer - @grid-row-gap;
 	}
 }
 
